--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -29,6 +29,9 @@ body {
     --blue-content-chart: #D8E6F3;
 
     --tam-column: 49%;
+
+    --box-shadow: 0 10px 11px -1px rgba(101,102,140,0.5);
+    --border-radius: 10px;
 }
 
 .mainBody {
@@ -70,7 +73,8 @@ body {
     display: flex;
     justify-content: space-between;
 
-    margin: 1rem;
+    margin-bottom: 1rem;
+    padding: 0;
 }
 
 
@@ -83,14 +87,14 @@ body {
     align-items: center;
     justify-content: start;
 
+
     background-color: var(--yellow-view);
 
     padding: 1rem 2rem 1rem 2rem;
-    width: var(--tam-column);
+    width: 98%;
 
-    /*border-radius: 20px;*/
-    /*border: 1px black solid;*/
-    box-shadow: 0 4px 4px 0 #00000040;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
 }
 
 .contenidoHeaderVistas > .contenidoHeaderEnergy > img {
@@ -111,11 +115,10 @@ body {
     background-color: var(--blue-view);
 
     padding: 1rem 2rem 1rem 2rem;
-    width: var(--tam-column);
+    width: 98%;
 
-    /*border-radius: 20px;*/
-    /*border: 1px black solid;*/
-    box-shadow: 0 4px 4px 0 #00000040;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
 }
 
 .contenidoHeaderVistas > .contenidoHeaderAgua > img {
@@ -138,12 +141,6 @@ body {
     margin: 2rem;
 
     width: 98%;
-    /*height: 85vh;*/
-
-    /*background-color: var(--background-content-main);*/
-    /*border-radius: 20px;*/
-    /*border: 6px black solid;*/
-    /*box-shadow: 0 0 15px 5px rgba(83, 80, 133, 1);*/
 }
 
 /* ------------------------------ Vista general ----------------------------- */
