Estructurando cajas gráficas

--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -23,19 +23,31 @@
 #graficaSemanalEnergy {
     display: flex;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
 
 #graficaMensualEnergy {
     display: none;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
 
 #graficaSemanalAgua {
     display: flex;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
 
 #graficaMensualAgua {
     display: none;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
