--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -29,7 +29,7 @@
 }
 
 #graficaMensualEnergy {
-    display: none;
+    display: flex;
     flex-direction: column;
 
     width: 100%;
@@ -45,7 +45,7 @@
 }
 
 #graficaMensualAgua {
-    display: none;
+    display: flex;
     flex-direction: column;
 
     width: 100%;
