Cambio vista gráfica aplicado

--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -20,33 +20,14 @@
 }
 
 /*Contenido gráficas*/
-#graficaSemanalEnergy {
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-    height: 100%;
+.contenidoGraficaConsumoEnergy, .contenidoGraficaConsumoAgua {
+    position: relative;
 }
 
-#graficaMensualEnergy {
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-    height: 100%;
-}
-
-#graficaSemanalAgua {
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-    height: 100%;
-}
-
-#graficaMensualAgua {
-    display: flex;
-    flex-direction: column;
+.contenidoGraficaConsumoEnergy > div, .contenidoGraficaConsumoAgua > div {
+    position: absolute;
+    top: 0;
+    left: 0;
 
     width: 100%;
     height: 100%;
