--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -33,13 +33,13 @@ body {
 
 @keyframes gradient-animation {
     0% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
     50% {
         background-position: 100% 50%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
 }
 
@@ -182,7 +182,6 @@ body {
     align-content: center;
     justify-content: center;
 
-    padding-top: 3rem;
     height: 50vh;
     width: var(--tam-column);
 
