--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -7,6 +7,11 @@
     display: none;
 }
 
+#contenidoConsumoEnergyMensual {
+    display: none;
+}
+
+
 #contenidoConsumoAguaActual {
     display: flex;
 }
