--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -66,8 +66,20 @@ body {
     justify-content: center;
 }
 
+/* Animacion Logos*/
+.imagenHeader img {
+    opacity: 1; /* Establece la opacidad inicial */
+    transition: opacity 0.5s ease-in-out; /* Aplica una transición de opacidad */
+}
+
+
 /* Tamaño máximo de las imágenes de la cabecera */
 .logo-img-header-SES > img {
+    max-width: 160px;
+    max-height: 120px;
+}
+
+.logo-img-header-QR > img {
     max-width: 160px;
     max-height: 120px;
 }
@@ -76,6 +88,18 @@ body {
     max-width: 120px;
     max-height: 120px;
 }
+
+.logo-img-header-zazume > img {
+    max-width: 160px;
+    max-height: 100px;
+}
+
+.logo-img-header-SanCristobal > img {
+    max-width: 160px;
+    max-height: 100px;
+}
+
+
 /* ---------------------------------------- */
 
 .contenidoHeaderTitulo {
@@ -90,6 +114,7 @@ body {
     text-shadow: 0 4px 4px 0 #00000040;
     font-size: 66px;
 }
+
 
 /* ---------------------------------------- */
 /*          Contenido principal
@@ -169,16 +194,8 @@ body {
     width: 100%;
 
     flex-direction: column;
-    /*flex-direction: row;*/
 }
 
-/*.contenidoConsumoEnergy .col-6, .contenidoConsumoAgua .col-6 {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    flex-wrap: wrap;*/
-/*    align-content: center;*/
-/*    justify-content: center;*/
-/*}*/
 
 .contenidoConsumoEnergy h3, .contenidoConsumoAgua h3 {
     text-align: center;
@@ -222,22 +239,16 @@ body {
 /* -------------------------------------------------------------------------- */
 /*                          Contenido final (footer)                          */
 /* -------------------------------------------------------------------------- */
+
 .contenidoFooter {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-
     display: flex;
-    align-content: center;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
 
-    /*De altura el mismo tamaño que hay en el header*/
-    height: 136px;
-
-    background-color: var(--green-view);
+    padding-top: 2rem;
+    padding-bottom: 1rem;
 }
-
 
 
 
