--- a/src/main/webapp/css/reto.css
+++ b/src/main/webapp/css/reto.css
@@ -1,3 +1,4 @@
+/*Posible implementación futura*/
 .bodyReto {
     background: linear-gradient(137deg, #0B0D21, #161A42, #5c0a6e);
     background-size: 180% 180%;
