--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -271,38 +271,39 @@ body {
     font-size: 230px;
 }
 
+/*Posible implementación futura*/
 /* -------------------------------------------------------------------------- */
 /*                                 Contenido Reto                             */
 /* -------------------------------------------------------------------------- */
-.momentoReto {
-    display: none;
-    position: absolute;
-    z-index: 100;
-    height: 100vh;
-    width: 100%;
-    background: black;
-}
+/*.momentoReto {*/
+/*    display: none;*/
+/*    position: absolute;*/
+/*    z-index: 100;*/
+/*    height: 100vh;*/
+/*    width: 100%;*/
+/*    background: black;*/
+/*}*/
 
-.momentoReto .retoContenedorTitulo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/*.momentoReto .retoContenedorTitulo {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
 
-    height: 100%;
-}
+/*    height: 100%;*/
+/*}*/
 
-.momentoReto .retoTitulo {
-    font-size: 150px;
-    text-align: center;
-    margin-bottom: 0;
-}
+/*.momentoReto .retoTitulo {*/
+/*    font-size: 150px;*/
+/*    text-align: center;*/
+/*    margin-bottom: 0;*/
+/*}*/
 
-.retoTextoNaranja {
-    font-weight: 300;
-    color: orange;
-}
+/*.retoTextoNaranja {*/
+/*    font-weight: 300;*/
+/*    color: orange;*/
+/*}*/
 
-.retoTextoBlanco {
-    font-weight: 700;
-    color: #fff;
-}
+/*.retoTextoBlanco {*/
+/*    font-weight: 700;*/
+/*    color: #fff;*/
+/*}*/
