--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -51,12 +51,13 @@
 /*                                 Contenido Reto                             */
 /* -------------------------------------------------------------------------- */
 .momentoReto {
-    display: none;
+    display: block;
     position: absolute;
     z-index: 100;
     height: 100vh;
     width: 100%;
     background: black;
+    opacity: 0;
 }
 
 .momentoReto .retoContenedorTitulo {
