Implementado cambio vista modo reto

--- a/src/main/webapp/css/reto.css
+++ b/src/main/webapp/css/reto.css
@@ -31,6 +31,22 @@
     color: white;
     mix-blend-mode: luminosity;
 }
+/* ---------------------------------------- */
+/*          Contenido cabecera
+/* ---------------------------------------- */
+.bodyReto .contenidoHeaderTituloGeneral {
+    display: none;
+}
+
+.bodyReto .contenidoHeaderTituloReto {
+    display: inherit;
+    font-size: 120px;
+}
+
+.bodyReto #contenedorLogos {
+    display: none;
+}
+
 
 /* ---------------------------------------- */
 /*          Contenido principal
