--- a/src/main/webapp/css/controlVistas.css
+++ b/src/main/webapp/css/controlVistas.css
@@ -53,6 +53,7 @@
 .momentoReto {
     display: block;
     position: absolute;
+    top: -2rem;
     z-index: 100;
     height: 100vh;
     width: 100%;
